Fixed image overflow on homepage.

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -54,6 +54,16 @@ i {
     color:#3b5998;
 }
 
+#about {
+    display:flex;
+    flex-direction:row;
+    flex-wrap: wrap;
+}
+
+#about > h2 {
+    flex: 0 0 100%;
+}
+
 /* Navigation bar styles*/
 
 nav * {
